--- a/public/scss/app.scss
+++ b/public/scss/app.scss
@@ -36,6 +36,12 @@ and (max-device-width : 720px) {
 }
 
 @media only screen 
+and (min-device-width : 720px) 
+and (max-device-width : 850px) { 
+	@import 'medium';
+}
+
+@media only screen 
 and (min-device-width : 0px) 
 and (max-device-width : 319px) { 
 	@import 'watch';
