--- a/public/scss/sections/_who.scss
+++ b/public/scss/sections/_who.scss
@@ -20,7 +20,7 @@
 
 		img {
 			border-radius: 240px;
-			width: 240px;
+			width: 90%;
 			display: block;
 			margin: auto;
 		}
@@ -53,7 +53,8 @@
 			position: absolute;
 			left: 50%;
 			-webkit-transform: translateX(-50%);
-
+			width: 127px;
+			
 			a {
 				width: 35px;
 				height: 35px;
